2003-03-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Printing named chords): add
	note about font size change in ChordNames.

	* mf/feta-beugel.mf (code): backport brace fix from 1.7

2003-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Backport:

	* cygwin/mknetrel: Exit if doc build fails.

	* lily/GNUmakefile: Add hack for .deps and --srcdir build.
	
	* lily/lexer.ll: 
	* lily/include/my-lily-lexer.hh: 
	* lily/include/includable-lexer.hh: Add flex kludge.

2003-02-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.6.8 released
	
	* Documentation/user/converters.itely: URL fix.

	* input/regression/percent-repeat-skipbars.ly: new file.

	* lily/percent-repeat-engraver.cc (try_music): also insert correct
	process moments for % repeats. Fixes problem when skipBars is set.

2003-02-10  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* mf/*, buildscipts/* : Backport 1.7 changes. Fixes problems with 
	incorrect font naming in .pfa files (i.e. broken PDF output).

2003-01-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.6.7 released
	
	* make/lilypond.redhat.spec.in: set docdir to %{_docdir}/lilypond/
	(without version number.)

2003-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm: Amy's chord patch.

2002-12-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/lilypond.hint (requires): Add cygwin, fileutils, findutils.

2003-01-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/paper19.ly: Add warning about paper19 not working.

	* lily/source-file.cc (get_line): backport off by two fix from
	development release.

2002-11-21  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/volta-engraver.cc (process_acknowledged_grobs): 
	Allow for text markup in repeatCommands. 

2002-11-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/INSTALL.texi (Top): PlanetCCRMA link.

2002-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: Add 1.6.6 release marker.  See below.
