@@ -12,11 +12,6 @@ StaffContext = \translator {
 	\consists "Time_signature_performer"
 
 }
-\translator { \StaffContext }
-\translator { \StaffContext
-  \name RhythmicStaff
-}
-
 
 VoiceContext = \translator {
 	\type "Performer_group_performer"
@@ -26,7 +21,6 @@ VoiceContext = \translator {
 	\consists "Piano_pedal_performer"
 	\accepts "Thread"
 }
-\translator { \VoiceContext }
 
 ThreadContext = \translator {
 	\type "Performer_group_performer"
@@ -34,19 +28,11 @@ ThreadContext = \translator {
 	\consists "Note_performer"
 	\consists "Tie_performer"
 }
-\translator { \ThreadContext }
 
-% retain for compatibility reasons (FIXME: convert-ly)
-\translator {
+FiguredBassContext = \translator {
 	\type "Performer_group_performer"
-	\name Grace
-}
-
-\translator
-{
-	\type "Performer_group_performer"
-	\name VoiceTwo\consists "Note_performer"
-
+	\name FiguredBass 
+	\consists "Swallow_performer"
 }
 
 GrandStaffContext = \translator {
@@ -55,14 +41,37 @@ GrandStaffContext = \translator {
 	\accepts RhythmicStaff
 	\accepts Staff
 }
-\translator { \GrandStaffContext }
 
 PianoStaffContext = \translator {
         \type "Performer_group_performer"
 	\name "PianoStaff"
 	\accepts Staff
 }
-\translator { \PianoStaffContext }
+
+ScoreContext = \translator {
+	\type "Score_performer"
+
+	\name Score
+	\alias Timing
+	instrument = #"bright acoustic"
+	\accepts Staff
+	\accepts GrandStaff
+	\accepts PianoStaff
+	\accepts Lyrics 
+	\accepts StaffGroup
+	\accepts ChoirStaff
+	\accepts RhythmicStaff
+	\accepts ChordNames
+	\accepts FiguredBass
+
+	\alias "Timing"
+	\consists "Timing_translator"
+	\consists "Swallow_performer"
+	
+	dynamicAbsoluteVolumeFunction = #default-dynamic-absolute-volume
+	instrumentEqualizer = #default-instrument-equalizer
+}
+
 
 \translator {
 	\type "Performer_group_performer"
@@ -102,26 +111,13 @@ PianoStaffContext = \translator {
 	\accepts Staff
 }
 
-ScoreContext = \translator {
-	\type "Score_performer"
 
-	\name Score
-	\alias Timing
-	instrument = #"bright acoustic"
-	\accepts Staff
-	\accepts GrandStaff
-	\accepts PianoStaff
-	\accepts Lyrics 
-	\accepts StaffGroup
-	\accepts ChoirStaff
-	\accepts RhythmicStaff
-	\accepts ChordNames
-	\alias "Timing"
-	\consists "Timing_translator"
-	\consists "Swallow_performer"
-	
-	dynamicAbsoluteVolumeFunction = #default-dynamic-absolute-volume
-	instrumentEqualizer = #default-instrument-equalizer
-}
+
 \translator { \ScoreContext }
-
+\translator { \StaffContext }
+\translator { \StaffContext \name RhythmicStaff }
+\translator { \VoiceContext }
+\translator { \ThreadContext }
+\translator { \PianoStaffContext }
+\translator { \GrandStaffContext }
+\translator { \FiguredBassContext }
